# PhotoShare

./: .dockerignore  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  PhotoShare.drawio  PhotoShare.sql  README.md  alembic.ini  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  env-example.txt  main.py  my_test_file.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 6d4aeedc01f1_initial_migration.py  7b036f36a21f_chore_allowed.py  96aeb0549b37_fix_nullable_for_transformed_url.py  b16a529169c2_initial_migration.py  e76596a4e399_feat_transformed_url_field_for_photo_.py
src/: exceptions.py  photo_effects_schemas.py  schemas.py  settings.py
src/conf/: config.py
src/database/: db.py  models.py
src/middleware/: exception_handlers.py  rate_limit.py  security_middleware.py
src/repository/: admin_moderation.py  comments.py  photo_transformation.py  photos.py  tags.py  token_blacklist.py  users.py
src/routes/: admin_moderation.py  admin_moderation_routes.py  auth.py  average_rating.py  comments.py  filter.py  permissions.py  photo_transformation.py  photos.py  profile.py  rating.py  search.py  tags.py  users.py
src/services/: auth.py  average_rating.py  blacklist.py  email.py  filter.py  rating.py  search.py
src/services/templates/: email_template.html
templates/: profile.html
tests/services/: test_rating.py
