[tool.poetry]
name = "photoshare"
version = "0.1.0"
description = ""
authors = ["ValKurta <valentyn.kurta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9"
cloudinary = "^1.41.0"
qrcode = {extras = ["pil"], version = "^8.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.1"
alembic = "^1.13.3"
python-multipart = "^0.0.12"
pydantic-settings = "^2.5.2"
pydantic = {extras = ["email"], version = "^2.9.2"}


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']